Fixed image reveal on mobile

--- a/app/scss/_events.scss
+++ b/app/scss/_events.scss
@@ -76,3 +76,10 @@
     }
   }
 }
+
+// Helpers
+.image-visible {
+  @include breakpoint-up(large) {
+    opacity: 1;
+  }
+}
